--- a/index.html
+++ b/index.html
@@ -1,27 +1,66 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Finkanet - Prêt Personnel</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 2em;
-      background-color: #f4f4f4;
-      text-align: center;
-    }
-    h1 {
-      color: #2c3e50;
-    }
-    p {
-      font-size: 1.2em;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Finkanet - Prêt Personnel</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 0; background-color: #f5f5f5; color: #333; }
+        header { background-color: #003366; color: white; padding: 20px 0; text-align: center; }
+        nav { background-color: #00509E; padding: 10px; text-align: center; }
+        nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
+        .hero { padding: 60px 20px; text-align: center; background: #e6f2ff; }
+        .hero h1 { font-size: 2.5em; margin-bottom: 10px; }
+        .hero p { font-size: 1.2em; }
+        .section { padding: 40px 20px; background: white; margin: 20px 0; }
+        .section h2 { color: #003366; }
+        footer { background-color: #003366; color: white; text-align: center; padding: 20px 10px; font-size: 0.9em; }
+        .btn { display: inline-block; padding: 10px 20px; margin-top: 20px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px; }
+        .btn:hover { background-color: #0056b3; }
+    </style>
 </head>
 <body>
-  <h1>Bienvenue chez Finkanet</h1>
-  <p>Obtenez votre prêt personnel rapidement et facilement.</p>
+    <header>
+        <h1>Finkanet</h1>
+        <p>Votre solution de prêt personnel rapide et sécurisé</p>
+    </header>
+    <nav>
+        <a href="#services">Nos Offres</a>
+        <a href="#conditions">Conditions</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    <div class="hero">
+        <h1>Obtenez un prêt en toute simplicité</h1>
+        <p>Une solution fiable, rapide et transparente pour tous vos besoins de financement.</p>
+        <a href="#contact" class="btn">Faire une demande</a>
+    </div>
+    <div class="section" id="services">
+        <h2>Nos Offres de Prêt</h2>
+        <ul>
+            <li>Prêt personnel sans justificatif</li>
+            <li>Prêt express sous 24h</li>
+            <li>Montants disponibles : 100 000 FCFA à 20 000 000 FCFA</li>
+            <li>Taux d'intérêt compétitifs</li>
+        </ul>
+    </div>
+    <div class="section" id="conditions">
+        <h2>Conditions d'Éligibilité</h2>
+        <ul>
+            <li>Âge minimum : 21 ans</li>
+            <li>Pièce d'identité en cours de validité</li>
+            <li>Revenus réguliers ou garant fiable</li>
+            <li>Dossier complet en ligne</li>
+        </ul>
+    </div>
+    <div class="section" id="contact">
+        <h2>Contact & Demande</h2>
+        <p>Remplissez notre formulaire en ligne ou contactez notre équipe :</p>
+        <p>Email : contact@finkanet.com<br>Téléphone : +229 00 00 00 00</p>
+        <a href="#" class="btn">Remplir le formulaire</a>
+    </div>
+    <footer>
+        &copy; 2025 Finkanet. Tous droits réservés.
+    </footer>
 </body>
 </html>
